mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_missing_return_lambda.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Lambda must return a value of type 'int' on all code paths
--> test_scripts/error_cases/semantic_missing_return_lambda.mux:2:14
   |
 2 |     auto f = func(int x) returns int {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
 3 |         if x > 0 {
   | ^^^^^^^^^^^^^^^^^^
 4 |             return x
   | ^^^^^^^^^^^^^^^^^^^^
   |
= help: Add a return statement at the end of every branch in the lambda body
